# Triangulo-com-OpenGL

./: CMakeLists.txt  main.cpp
